(#17)[4/7/2018-10:49 1.2.4 Sergix]
	Fixed incorrect version output.
	Pushed updates to Git.

(#16)[4/6/2018-22:50 1.2.3 Sergix]
	Fixed 'dist' properties not recognizing directory paths.
	Moved the project's build config files into their own 'config/' folder.
	Pushed updates to Git.

(#15)[4/3/2018-22:44 1.2.2 Sergix]
	Cleaned up some of the code.
	Added support for muli-level sections in documentation template.
	Pushed updates to Git.

(#14)[3/21/2018-22:44 1.2.1 Sergix]
	Added better verifying of file paths in the 'dist' properties for docs, changelog, and source.
	Interpolation can now be used in the 'dist' properties, along with the new '%e' interpolater (file extension).
	Pushed updates to Git.

(#13)[3/21/2018-22:44 1.2.0 Sergix]
	Moved docs.replacer() to util.interpolate().
	"dist" property paths can now include interpolaters, as well as a new interpolater %e for file extension.
	"dist" property can now be a path to a file; if it is a directory it has a fallback default filename.
	Pushed updates to Git.

(#12)[3/21/2018-14:45 1.1.2 Sergix]
	Fixed issue with template.json not being able to be read.
	Pushed updates to Git.

(#11)[3/21/2018-11:38 1.1.1 Sergix]
	Forgot the shebang line...
	Pushed updates to Git.

(#10)[3/21/2018-11:21 1.1.0 Sergix]
	Added "ignore" property for "changelog" in rfconfig.
	Changed "compression" property to array.
	Fixed template.json issue.

(#9)[3/21/2018-10:27 1.0.1 Sergix]
	Fixed dependency listing in package.json.
	Fixed application not running from global as cli.
	Updated README.md.
	Pushed updates to Git.

(#8)[3/20/2018-22:41 1.0.0 Sergix]
	Fixed virtually all known issues!
	Added basic Maven pom.xml support.
	Ready for a 1.0.0 release! (Haha, a bit ironic I must say.)
	Uploaded project to npm.
	Pushed updates to Git.

(#7)[3/20/2018-16:49 0.1.0 Sergix]
	Fixed issue in config.ts file writing.
	Added console colors through 'colors' npm library.
	Moved config template to template.json file.

(#6)[1/6/2018-23:30 0.1.0 Sergix]