@@ -13,13 +13,13 @@ function get() {
     for (let i = 0; i < fileContents.length; i++) {
         if (fileContents[i] === '\n') {
             config_1.rfconfig.changelog.ignore.forEach((x) => {
-                if (x !== line.trim())
+                if (x !== line.trim()) // if we need to ignore the line
                     data[data.length] = line.trim();
             });
             line = '';
             continue;
         }
-        if (fileContents[i] !== '\r') {
+        if (fileContents[i] !== '\r') { // skip return carriage
             line += fileContents[i];
         }
     }
@@ -33,13 +33,13 @@ function match(x) {
     const regex = new RegExp(testString);
     let flag = false;
     for (let i = 0; i < x.length; i++) {
-        if (!flag) {
-            if (regex.test(x[i])) {
+        if (!flag) { // if we are not currently reading an entry
+            if (regex.test(x[i])) { // if the string matches the header format
                 flag = true;
             }
             continue;
         }
-        if (x[i] === '\n' || x[i] === '') {
+        if (x[i] === '\n' || x[i] === '') { // if the data is a newline, it is the end of entry
             flag = false;
             continue;
         }
