@@ -37,11 +37,11 @@ exports.path = 'rfconfig.json';
 exports.rfconfig = template;
 exports.projectType = '';
 function load() {
-    if (program.op_configFile !== undefined) {
+    if (program.op_configFile !== undefined) { // config file path was specified by user
         exports.path = program.op_configFile;
     }
     const file = json.readFileSync(exports.path, { throws: false });
-    if (file === null) {
+    if (file === null) { // config file does not exist
         console.info(colors.cyan('Creating template config file in current directory...'));
         json.writeFileSync(exports.path, template, { spaces: 2, EOL: util_1.nl });
         console.info(colors.yellow.underline('rfconfig.json'), colors.yellow('file created. Please modify this file to your liking, then run the application again.\n\nReleaseflow will now close.'));
@@ -50,11 +50,11 @@ function load() {
     }
     exports.rfconfig = json.readFileSync(exports.path);
     if (exports.rfconfig.package) {
-        if (exports.rfconfig.package.endsWith('package.json')) {
+        if (exports.rfconfig.package.endsWith('package.json')) { // Node.js
             exports.projectType = 'node';
             exports.projectPackage = JSON.parse(fs.readFileSync(exports.rfconfig.package).toString());
         }
-        else if (exports.rfconfig.package.endsWith('pom.xml')) {
+        else if (exports.rfconfig.package.endsWith('pom.xml')) { // Maven
             xmlj.parseString(fs.readFileSync(exports.rfconfig.package).toString(), (err, result) => {
                 if (err) {
                     console.error(colors.red('ERROR: Failed to parse pom.xml XML data'));
