@@ -3,7 +3,7 @@ Object.defineProperty(exports, "__esModule", { value: true });
 const program = require("commander");
 function options() {
     program
-        .version('0.1.0')
+        .version('1.2.4')
         .option('-l, --changelog', 'build changelog')
         .option('-d, --docs', 'build documentation template')
         .option('-e, --exec', 'build executable')
