@@ -34,13 +34,13 @@ function links(x) {
     else if (repo.endsWith('/')) {
         repo = repo.substr(0, repo.length - 1);
     }
-    for (let i = 0; i < x.length; i++) {
-        if (flag) {
-            if (/[0-9]/.test(x[i])) {
+    for (let i = 0; i < x.length; i++) { // character
+        if (flag) { // flag is set
+            if (/[0-9]/.test(x[i])) { // is an integer
                 num += x[i]; // add it to the issue number string
                 continue;
             }
-            else if (num !== '') {
+            else if (num !== '') { // if we have finished reading a number
                 if (config_1.rfconfig.markdown) {
                     data += `[#${num}](`;
                 }
@@ -53,7 +53,7 @@ function links(x) {
             // not a number and we are not currently reading a number
             flag = false;
         }
-        if (x[i] === '#') {
+        if (x[i] === '#') { // if the character is a '#'
             flag = true;
             continue;
         }
@@ -171,22 +171,35 @@ function replacer(x, options) {
 exports.replacer = replacer;
 function filenameHandler(filename, ext, prefix, logMsg) {
     let isDir = false;
+    const path = filename.slice(0, filename.lastIndexOf('/'));
+    console.info(colors.cyan(path));
     // check if the directory exists
     try {
         if (fs_1.statSync(filename).isDirectory()) {
+            console.info(colors.cyan('IS DIR'));
             isDir = true;
         }
     }
     catch (err) {
-        // check if its a file
         try {
-            if (fs_1.statSync(filename).isFile()) {
-                isDir = false;
+            if (fs_1.statSync(path).isDirectory()) {
+                console.info(colors.cyan('IS DIR2'));
+                return filename;
             }
         }
         catch (err) {
-            console.error(colors.red(`ERROR: Could not find directory or file ${filename}.`));
-            process.exit(0);
+            // check if its a file
+            try {
+                if (fs_1.statSync(filename).isFile()) {
+                    console.info(colors.cyan('IS FILE'));
+                    isDir = false;
+                }
+            }
+            catch (err) {
+                console.error(colors.red(err));
+                console.error(colors.red(`ERROR: Could not find directory or file ${filename}.`));
+                process.exit(0);
+            }
         }
     }
     if (isDir) {
